2 files and Homework 7 tasks

--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
     </div>
   </main>
 
-<script src="js/homework-6.js"></script>
+<script type="module" src="js/homework-7.js"></script>
 </body>
 </html>
