--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <button class="button__item" id="output-console-log">Вывести сообщение в консоль лог</button>
         <button class="button__item" id="color-toggle-btn">Поменять цвет кнопки</button>
       </div>
-      <div class="container__product-cards">
-          
-      </div>
+      <div class="container__product-cards"></div>
     </div>
   </main>
 
@@ -35,14 +33,10 @@
         <h3 class="product-cards__description-title"></h3>
         <p class="product-cards__description-paragraph"></p>
         <span class="product-cards__description-compound"></span>
-        <ul class="product-cards__description-list">
-          <li class="description-list__item-1"></li>
-          <li class="description-list__item-2"></li>
-          <li class="description-list__item-3"></li>
-        </ul>
+        <ul class="product-cards__description-list"></ul>
       </div>
       <div class="product-cards__description-price">
-        <span class="description-price__text"></span>
+        <span class="description-price__text">Цена</span>
         <span class="description-price__tag"></span>
       </div>
     </article>
