--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <span class="product-cards__description-item"></span>
         <h3 class="product-cards__description-title"></h3>
         <p class="product-cards__description-paragraph"></p>
-        <span class="product-cards__description-compound"></span>
+        <span class="product-cards__description-compound">Состав:</span>
         <ul class="product-cards__description-list"></ul>
       </div>
       <div class="product-cards__description-price">
