--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <label for="surname">Фамилия:</label>
     <input placeholder="Введите фамилию" type="text" name="userSurname" required>
     <label for="data">Дата рождения:</label>
-    <input placeholder="Введите дата рождения" type="date" name="userData" required>
+    <input placeholder="Введите дата рождения" type="date" name="userDate" required>
     <label for="login">Логин:</label>
     <input placeholder="Введите логин" type="text" name="userLogin" required>
     <label for="passworld">Пароль:</label>
