--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </article>
   </template>
 
-  <form id="registration-form">
+  <form id="registration-form" novalidate>
     <label for="name">Имя:</label>
     <input placeholder="Введите имя" type="text" name="userName" required>
     <label for="surname">Фамилия:</label>
@@ -115,7 +115,7 @@
     </div>
   </footer>
 
-  <script type="module" src="js/homework-8.js"></script>
+  <!-- <script type="module" src="js/homework-8.js"></script> -->
   <script src="js/homework-9.js"></script>
 </body>
 </html>
