--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-widt initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/product-cards.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet"
@@ -29,17 +29,17 @@
 
   <form id="registration-form">
     <label for="name">Имя:</label>
-    <input placeholder="Введите имя" type="text" name="userName" required>
+    <input id="name" placeholder="Введите имя" type="text" name="userName" required>
     <label for="surname">Фамилия:</label>
-    <input placeholder="Введите фамилию" type="text" name="userSurname" required>
+    <input id="surname" placeholder="Введите фамилию" type="text" name="userSurname" required>
     <label for="data">Дата рождения:</label>
-    <input placeholder="Введите дата рождения" type="date" name="userDate" required>
+    <input id="data" placeholder="Введите дата рождения" type="date" name="userDate" required>
     <label for="login">Логин:</label>
-    <input placeholder="Введите логин" type="text" name="userLogin" required>
-    <label for="passworld">Пароль:</label>
-    <input placeholder="Введите пароль" type="password" id="user-password" name="userPassword" required>
-    <label for="repeated-password">Подтвердите пароль:</label>
-    <input placeholder="Пароль" type="password" id="user-repeated-password" name="userRepeatedPassword" required>
+    <input id="login" placeholder="Введите логин" type="text" name="userLogin" required>
+    <label for="user-passworld">Пароль:</label>
+    <input id="user-password" placeholder="Введите пароль" type="password" name="userPassword" required>
+    <label for="user-repeated-password">Подтвердите пароль:</label>
+    <input id="user-repeated-password" placeholder="Пароль" type="password" name="userRepeatedPassword" required>
     <button type="submit" class="registration-btn">Зарегистрироваться</button>
   </form>
   
