working with classes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/product-cards.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Montserrat:itawght@100..900;100..900&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:itawght@100..900;100..900&display=swap">
   <title>Product Card</title>
 </head>
 <body>
@@ -43,7 +42,7 @@
     <button type="submit" class="registration-btn">Зарегистрироваться</button>
   </form>
   
-  <div class="modal close-modal">
+  <div id="modal" class="modal close-modal">
     <div class="modal-showed">
       <form id="authorization-form">
         <h3 class="authorization-form__title">Авторизация</h3>
@@ -115,7 +114,6 @@
     </div>
   </footer>
 
-  <script type="module" src="js/homework-8.js"></script>
-  <script src="js/homework-9.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
