implementation of OOP principles

--- a/index.html
+++ b/index.html
@@ -115,5 +115,6 @@
   </footer>
 
   <script type="module" src="js/main.js"></script>
+  <script type="module" src="js/homeworks/homework-11/coca-cola.js"></script>
 </body>
 </html>
